--- a/processo/templates/index.html
+++ b/processo/templates/index.html
@@ -7,18 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    {% for file in files %}
-            <a href="files/{{file.files}}">{{file.files}}</a><br>
+    <h1>oi</h1>
+    {% for processo in processos %}
+        <h1>{{ processo }}</h1>
     {% endfor %}
-    <form action="{% url 'processo:upload' %}" method="post" enctype="multipart/form-data" >
-        {% csrf_token %}
-        <input type="file" name="file" id="">
-        <input type="file" name="file1" id="">
-
-        <input type="text" name="nome">
-        <button type="submit">Enviar</button>
-
-    </form>
-    
 </body>
 </html>
