messages and logout button

--- a/code/templates/base/body/sidebar.html
+++ b/code/templates/base/body/sidebar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<aside style="background: rgb(20, 39, 44)" class="main-sidebar main-sidebar-custom sidebar-dark-secondary elevation-4">
+<aside style="background: #0d192c" class="main-sidebar main-sidebar-custom sidebar-dark-secondary elevation-4">
     <div class="sidebar">
 
         <div style="align-items: center; justify-content: center;" class="mt-3 pb-3 mb-3 d-flex">
@@ -22,7 +22,7 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link sidebar-text">
                         <p>
-                            <i class="fas fa-gavel" style="color: #e3dede;"></i>
+                            <i class="fas fa-gavel" style="color: #ffffff;"></i>
                                 Processos
                         </p>
                     </a>
@@ -30,7 +30,7 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link sidebar-text">
                         <p>
-                            <i class="fas fa-book"></i>
+                            <i class="fas fa-book" style="color: #ffffff;"></i>
                             Registros
                         </p>
                     </a>
