--- a/code/templates/base/base.html
+++ b/code/templates/base/base.html
@@ -18,18 +18,21 @@
         <div class="content-wrapper">
             <section class="content-header">
               <div class="container-fluid">
-              <div class="row mb-2">
-                  <div class="col-sm-6">
-                      {% block title %}{% endblock %}
-                  </div>
-                  <div class="col-sm-6">
-                  <ol class="breadcrumb float-sm-right">
-                      {% block breadcrumb %}{% endblock %}
-                  </ol>
-                  </div>
-              </div>
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        {% block title %}{% endblock %}
+                    </div>
+                    <div class="col-sm-6">
+                      <ol class="breadcrumb float-sm-right">
+                          {% block breadcrumb %}{% endblock %}
+                      </ol>
+                    </div>
+                </div>
               </div>
             </section> 
+            <div style="margin-left: 75%; margin-top: 40%">
+              {% include "messages/messages.html" %}
+            </div>
             <section class="content">
                 {% block content %}{% endblock %}
             </section>
