--- a/code/templates/base/body/navbar.html
+++ b/code/templates/base/body/navbar.html
@@ -11,4 +11,11 @@
             <a href="#" class="nav-link">Contact</a>
         </li>
     </ul>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link text-danger" href="{% url 'logout' %}" role="button">
+             Sair   <i class="fas fa-sign-out-alt"></i>
+            </a>
+        </li>
+    </ul>
 </nav>
