list page and detail

--- a/code/templates/base/base.html
+++ b/code/templates/base/base.html
@@ -30,9 +30,10 @@
                 </div>
               </div>
             </section> 
-            <div style="margin-left: 75%; margin-top: 40%">
+            {% comment %} <div style="margin-left: 75%; margin-top: 40%">
               {% include "messages/messages.html" %}
-            </div>
+
+            </div> {% endcomment %}
             <section class="content">
                 {% block content %}{% endblock %}
             </section>
