--- a/code/processo/templates/lawsuits/lawsuit_list.html
+++ b/code/processo/templates/lawsuits/lawsuit_list.html
@@ -1,9 +1,58 @@
 {% extends 'base/base.html' %}
 {% block title %}<h1>Processos</h1>{% endblock title %}
 {% block breadcrumb %}
-    <li class="breadcrumb-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
     <li class="breadcrumb-item active">Processos</li>
 {% endblock %}
 {% block content %}
-
+<div class="container-fluid">
+    <div class="card">
+        <div class="card-header">
+            <h2 class="card-title">Processos</h2>
+            <div class="card-tools">
+                <div class="input-group input-group-sm" style="width: 150px;">
+                    <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-default">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-body p-0">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Codigo do Processo</th>
+                        <th>Cliente</th>
+                        <th>Parte Adversa</th>
+                        <th>Advogado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for lawsuit in lawsuits %}
+                    <tr>
+                            <td><a href="{% url 'lawsuits:detail' lawsuit.pk %}">{{ lawsuit.codigo_processo }}</a></td>
+                            <td>{{ lawsuit.cliente }}</td>
+                            <td>{{ lawsuit.parte_adversa }}</td>
+                            <td>{{ lawsuit.advogado_responsavel }}</td>
+                            <td><a href="{% url 'lawsuits:detail' lawsuit.pk %}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
+                            
+                    <tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <div class="card-footer clearfix">
+                <ul class="pagination pagination-sm m-0 float-right">
+                <li class="page-item"><a class="page-link" href="#">«</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">»</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
