--- a/code/project/templates/messages/messages.html
+++ b/code/project/templates/messages/messages.html
@@ -6,11 +6,11 @@
                     <div class="toast-body">
                         {{msg|safe}}
                     </div>
-                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-delay="3000" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
             </div>
         {% elif msg.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
-            <div class="toast align-items-center text-white bg-success border-0 top-0 end-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast align-items-center text-white bg-success border-0 top-0 end-0" data-bs-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="d-flex">
                     <div class="toast-body">
                         {{msg|safe}}
@@ -19,7 +19,7 @@
                 </div>
             </div>
         {% elif msg.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-            <div class="toast align-items-center text-white bg-info border-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast align-items-center text-white bg-info border-0" data-bs-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="d-flex">
                     <div class="toast-body">
                         {{msg|safe}}
@@ -28,7 +28,7 @@
                 </div>
             </div>
         {% elif msg.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
-            <div class="toast align-items-center text-dark bg-warning border-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast align-items-center text-dark bg-warning border-0" data-bs-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="d-flex">
                     <div class="toast-body">
                         {{msg|safe}}
