lawsuits modals edit and delete

--- a/code/project/templates/base/base.html
+++ b/code/project/templates/base/base.html
@@ -8,6 +8,11 @@
             font-size: 20px;
             color: rgb(255, 255, 255);
         }
+
+        .mont-serrat {
+          font-family: 'Montserrat', sans-serif;
+          font-size: 15px;
+        }
     </style>
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
@@ -30,10 +35,6 @@
                 </div>
               </div>
             </section> 
-            {% comment %} <div style="margin-left: 75%; margin-top: 40%">
-              {% include "messages/messages.html" %}
-
-            </div> {% endcomment %}
             <section class="content">
                 {% block content %}{% endblock %}
             </section>
