--- a/code/processo/templates/lawsuit_detail.html
+++ b/code/processo/templates/lawsuit_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-{% block title %}<h1>Processos</h1>{% endblock title %}
+{% block title %}<h1 class="mont-serrat">Processo - {{ lawsuit }} </h1>{% endblock title %}
 {% block breadcrumb %}
     <li class="breadcrumb-item">Home</li>
     <li class="breadcrumb-item"><a href="{% url 'lawsuits:list' %}" >Processos</a></li>
@@ -15,8 +15,8 @@
                 </button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link text-dark" id="profile-tab" data-bs-toggle="tab" data-bs-target="#lawsuit-cousts" type="button" role="tab" aria-controls="lawsuit-cousts" aria-selected="false">
-                    Custas
+                <button class="nav-link text-dark" id="profile-tab" data-bs-toggle="tab" data-bs-target="#lawsuit-values" type="button" role="tab" aria-controls="lawsuit-values" aria-selected="false">
+                    Valores
                 </button>
             </li>
             <li class="nav-item" role="presentation">
@@ -31,11 +31,12 @@
             <div class="tab-pane fade show active" id="lawsuit" role="tabpanel" aria-labelledby="lawsuit-tab">
                 {% include "lawsuit_detail/lawsuit_infos.html" %}
             </div>
-            <div class="tab-pane fade" id="lawsuit-cousts" role="tabpanel" aria-labelledby="lawsuit-cousts-tab">
+            <div class="tab-pane fade" id="lawsuit-values" role="tabpanel" aria-labelledby="lawsuit-values-tab">
+                {% include "lawsuit_detail/lawsuit_values.html" %}
 
             </div>
             <div class="tab-pane fade" id="lawsuit-files" role="tabpanel" aria-labelledby="lawsuit-files-tab">
-                
+                {% include "lawsuit_detail/lawsuit_files.html" %}
             </div>
         </div>
     </div>
