--- a/code/processo/templates/lawsuit_detail/lawsuit_infos.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_infos.html
@@ -1,31 +1,60 @@
 <div class="invoice p-3 mb-3">
-
     <div class="row">
         <div class="col-12">
             <h5>
-            <b>Codigo do Processo</b> {{ lawsuit.codigo_processo }}
+                <b>Codigo do Processo</b> <span class="mont-serrat">{{ lawsuit.codigo_processo }} </span>
+                <small class="float-right">
+                    {{ lawsuit.iniciado }} - {% if lawsuit.finalizado %} {{lawsuit.finalizado}} {% else %} Não finalizado {% endif %}
+                 </small>
             </h5>
             <hr>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-sm-4">
+            <div class="info-box bg-light">
+                <div class="info-box-content">
+                    <span class="info-box-text text-center text-muted mont-serrat">Ganhos do Processo</span>
+                    <span class="info-box-number text-center text-muted mb-0 mont-serrat">+ R${{lawsuit.gain}}</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-4">
+            <div class="info-box bg-light">
+                <div class="info-box-content">
+                    <span class="info-box-text text-center text-muted mont-serrat">Custos do Processo</span>
+                    <span class="info-box-number text-center text-muted mb-0 mont-serrat">- R${{lawsuit.coust}}</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-4">
+            <div class="info-box bg-light">
+                <div class="info-box-content">
+                    <span class="info-box-text text-center text-muted mont-serrat">Lucro do Processo</span>
+                    <span class="info-box-number text-center text-muted mb-0 mont-serrat">R${{lawsuit.profit}}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
     
     <div class="row invoice-info">
         <div class="col-sm-3 invoice-col">
-            <strong>Cliente</strong><br>
+            <strong class="mont-serrat">Cliente</strong><br>
             <li>
                 {{ lawsuit.cliente }}<br>
             </li>
             <li>
                 {{ lawsuit.posicao }}<br>
             </li>
-            <strong>Parte Adversa</strong><br>
+            <strong class="mont-serrat">Parte Adversa</strong><br>
             <li>
                 {{ lawsuit.parte_adversa }}<br>
             </li>
         </div>
     
         <div class="col-sm-3 invoice-col">
-                <strong>Advogados</strong><br>
+                <strong class="mont-serrat">Advogados</strong><br>
                 <li>
                     {{ lawsuit.advogado_responsavel }}<br>
                 </li>
@@ -34,35 +63,45 @@
                         {{ lawsuit.colaborador }}<br>
                     </li>
                 {% endif %}
-                <strong>Cliente de  </strong><br>
+                <strong class="mont-serrat">Cliente de  </strong><br>
                 <li>
                     {{ lawsuit.cliente_de }}
                 </li>
         </div>
     
         <div class="col-sm-3 invoice-col">
-            <strong>Vara</strong><br>
+            <strong class="mont-serrat">Vara</strong><br>
             {{ lawsuit.vara }}<br>
-            <strong>Estado  </strong><br>
+            <strong class="mont-serrat">Estado  </strong><br>
             {{ lawsuit.estado }}<br>
-            <strong>Munícpio  </strong><br>
+            <strong class="mont-serrat">Munícpio  </strong><br>
             {{ lawsuit.municipio }}<br>
         </div>
 
         <div class="col-sm-3 invoice-col">
-            <strong>Assunto</strong><br>
+            <strong class="mont-serrat">Assunto</strong><br>
             {{ lawsuit.assunto }}<br>
-            <strong>Iniciado  </strong><br>
-            {{ lawsuit.iniciado }}<br>
-            <strong>Finalizado  </strong><br>
-            {% if lawsuit.finalizado %}
-                {{ lawsuit.finalizado }}<br>
-            {% else %}
-                Processo não finalizado
-            {% endif %}
+            <strong class="mont-serrat">Observações</strong><br>
+            {{ lawsuit.observacoes }}<br>
         </div>
-        
-    
     </div>
-    
+
+    <div class="row" >
+        <div class="form-group" >
+            <button type="button" class="btn btn-block btn-primary mont-serrat">
+                Editar
+            </button>
+        </div>
+        <div class="form-group" style="margin-left: 10px">
+            <button type="button" class="btn btn-block btn-danger mont-serrat">
+                Apagar
+            </button>   
+        </div>     
+        <div class="form-group" style="margin-left: 10px">
+            <button type="button" class="btn btn-block btn-success mont-serrat">
+                Finalizar
+            </button>
+        </div>
+    </div>
+
 </div>
