--- a/code/processo/templates/lawsuit_detail/lawsuit_values.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_values.html
@@ -1,14 +1,8 @@
-{% extends 'base/base.html' %}
-{% block title %}<h1>Processos</h1>{% endblock title %}
-{% block breadcrumb %}
-    <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">Processos</li>
-{% endblock %}
-{% block content %}
+{% include "lawsuit_detail/lawsuit_modals/lawsuit_values_modal.html" %}
 <div class="container-fluid">
     <div class="card">
         <div class="card-header">
-            <h2 class="card-title">Processos</h2>
+            <h2 class="card-title mont-serrat">Valores do Processo</h2>
             <div class="card-tools">
                 <div class="input-group input-group-sm" style="width: 500px;">
                     <input type="text" name="table_search" class="form-control float-right" placeholder="Pesquisar">
@@ -24,31 +18,31 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Codigo do Processo</th>
-                        <th>Cliente</th>
-                        <th>Parte Adversa</th>
+                        <th>Referente</th>
                         <th>Advogado</th>
-                        <th>Iniciado</th>
-                        <th>Finalizado</th>
-                        
+                        <th>Valor</th>
+                        <th>Criado</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for lawsuit in lawsuits %}
+                    {% for lawsuit_value in lawsuit_values %}
                     <tr>
-                            <td><a href="{% url 'lawsuits:detail' lawsuit.pk %}">{{ lawsuit.codigo_processo }}</a></td>
-                            <td>{{ lawsuit.cliente }}</td>
-                            <td>{{ lawsuit.parte_adversa }}</td>
-                            <td>{{ lawsuit.advogado_responsavel }}</td>
-                            <td>{{ lawsuit.iniciado }}</td>
-                            <td>{%if lawsuit.finalizado%} {{ lawsuit.finalizado }} {% else %} Em andamento {%endif%} </td>
-                            <td><a href="{% url 'lawsuits:detail' lawsuit.pk %}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
-                            
+                        <td>{{ lawsuit_value.referente }}</td>
+                        <td>{{ lawsuit_value.advogado_responsavel }}</td>
+                        <td>{% if lawsuit_value.ganho %}<span class="text-success">+R${{ lawsuit_value.valor }}</span>{% else %} <span class="text-danger">-R${{ lawsuit_value.valor }}</span>  {% endif %}</td>
+                        <td>{{ lawsuit_value.created_at }}</td>
+                        <td><a href="" data-toggle="modal" data-target="#values-edit-modal-{{lawsuit_value.pk}}"><i class="fas fa-edit" style="color: #89a2cd;"></i></a></td>
+                        <td><a href="" data-toggle="modal" data-target="#value-delete-modal-{{lawsuit_value.pk}}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
                     <tr>
-                    {% endfor %}
+                    {% include "lawsuit_detail/lawsuit_modals/lawsuit_values_edit.html" %}
+                    {% include "lawsuit_detail/lawsuit_modals/lawsuit_values_delete.html" %}
+                        {% endfor %}
                 </tbody>
             </table>
             <div class="card-footer clearfix">
+                <button class="btn btn-success btn-sm mont-serrat" data-toggle="modal" data-target="#values-modal" >
+                    Novo Valor
+                </button>
                 <ul class="pagination pagination-sm m-0 float-right">
                 <li class="page-item"><a class="page-link" href="#">«</a></li>
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -60,4 +54,3 @@
         </div>
     </div>
 </div>
-{% endblock %}
