--- a/code/project/templates/base/scripts.html
+++ b/code/project/templates/base/scripts.html
@@ -1,8 +1,15 @@
 {% load static %}
 <!-- Jquery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<!-- InputMask -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
+
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="{% static 'dist/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
 <!-- overlayScrollbars -->
 <script src="{% static 'dist/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
 <!-- AdminLTE App -->
@@ -11,5 +18,19 @@
 <script>
     $(document).ready(function(){
         $('.toast').toast('show')
-    })
+        $(".money").inputmask('decimal', {
+            'alias': 'numeric',
+            'groupSeparator': '.',
+            'radixPoint': ",",
+            'digits': 2,
+            'digitsOptional': false,
+            'allowMinus': true,
+            'prefix': 'R$ ',
+            'rightAlign': false,
+            'unmaskAsNumber': true,
+            'removeMaskOnSubmit': true,
+    });
+    ;})
+    
+
 </script>
