--- a/code/processo/templates/lawsuit_detail/lawsuit_infos.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_infos.html
@@ -15,7 +15,7 @@
             <div class="info-box bg-light">
                 <div class="info-box-content">
                     <span class="info-box-text text-center text-muted mont-serrat">Ganhos do Processo</span>
-                    <span class="info-box-number text-center text-muted mb-0 mont-serrat">+ R${{lawsuit.gain}}</span>
+                    <span class="info-box-number text-center text-success mb-0 mont-serrat">+ R${{lawsuit.gain}}</span>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@
             <div class="info-box bg-light">
                 <div class="info-box-content">
                     <span class="info-box-text text-center text-muted mont-serrat">Custos do Processo</span>
-                    <span class="info-box-number text-center text-muted mb-0 mont-serrat">- R${{lawsuit.coust}}</span>
+                    <span class="info-box-number text-center text-danger mb-0 mont-serrat">- R${{lawsuit.coust}}</span>
                 </div>
             </div>
         </div>
@@ -31,7 +31,13 @@
             <div class="info-box bg-light">
                 <div class="info-box-content">
                     <span class="info-box-text text-center text-muted mont-serrat">Lucro do Processo</span>
-                    <span class="info-box-number text-center text-muted mb-0 mont-serrat">R${{lawsuit.profit}}</span>
+                    {% if lawsuit.profit == 0 %}
+                        <span class="info-box-number text-center text-muted mb-0 mont-serrat">R${{lawsuit.profit}}</span>
+                    {% elif lawsuit.profit > 0%}
+                        <span class="info-box-number text-center text-success mb-0 mont-serrat">+R${{lawsuit.profit}}</span>
+                    {% else %}
+                        <span class="info-box-number text-center text-danger mb-0 mont-serrat">-R${{lawsuit.profit}}</span>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -98,9 +104,15 @@
             </button>   
         </div>     
         <div class="form-group" style="margin-left: 10px">
-            <button type="button" class="btn btn-block btn-success mont-serrat">
-                Finalizar
-            </button>
+            {% if lawsuit.finalizado == None %}
+                <button type="button" class="btn btn-block btn-success mont-serrat">
+                    Finalizar
+                </button>
+            {% else %}
+                <button type="button" disabled class="btn btn-block btn-secondary mont-serrat">
+                    Finalizado
+                </button>
+            {% endif %}
         </div>
     </div>
 
