--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -49,6 +49,10 @@
                 </tbody>
             </table>
             <div class="card-footer clearfix">
+                <button class="btn btn-success btn-sm mont-serrat" data-toggle="modal" data-target="" >
+                    Novo Processo
+                </button>
+
                 <ul class="pagination pagination-sm m-0 float-right">
                 <li class="page-item"><a class="page-link" href="#">«</a></li>
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
