--- a/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_files_delete.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_files_delete.html
@@ -2,9 +2,9 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header " >
-                <h4 class="modal-title" >
+                <h1 class="modal-title mont-serrat" >
                     Você está prestes a apagar o arquivo
-                </h4>
+                </h1>
             </div>
             <div class="modal-body">
                 <span class="text">Nome do Anexo: {{ lawsuit_file.nome_do_anexo  }}</span><br>
