--- a/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_delete.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_modals/lawsuit_values_delete.html
@@ -2,9 +2,9 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header " >
-                <h4 class="modal-title" >
-                    Você está prestes a apagar o um registro
-                </h4>
+                <h1 class="modal-title mont-serrat" >
+                    Você está prestes a apagar um valor do processo
+                </h1>
             </div>
             <div class="modal-body">
                 <span class="text">Referente: {{ lawsuit_value.referente  }}</span><br>
