--- a/code/project/templates/base/base.html
+++ b/code/project/templates/base/base.html
@@ -5,8 +5,10 @@
     {% include "base/head.html" %}
     <style>
         .sidebar-text{
-            font-size: 20px;
+            font-size: 18px;
             color: rgb(255, 255, 255);
+            font-family: 'Montserrat', sans-serif;
+
         }
 
         .mont-serrat {
@@ -15,7 +17,7 @@
         }
     </style>
   </head>
-  <body class="hold-transition sidebar-mini layout-fixed">
+  <body class="layout-fixed">
     <div class="wrapper">
         {% include "base/body/navbar.html" %}
         {% include "base/body/sidebar.html" %}
