--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -1,9 +1,9 @@
 {% load static %}
-<aside style="background: #0d192c" class="main-sidebar main-sidebar-custom sidebar-dark-secondary elevation-4">
+<aside style="background: #0e1e38" class="main-sidebar main-sidebar-custom sidebar-dark-secondary elevation-4">
     <div class="sidebar">
 
         <div style="align-items: center; justify-content: center;" class="mt-3 pb-3 mb-3 d-flex">
-            <img style="width: 150px; height: 150px; border-radius: 100px;" src="{% static 'dist/img/images/277606405_1177846459642535_7637691257266544301_n.jpg' %}" alt="">
+            <img style="width: 150px; height: 150px; border-radius: 60px;" src="{% static 'dist/img/images/277606405_1177846459642535_7637691257266544301_n.jpg' %}" alt="">
         </div>
 
         <div class="user-panel mt-3 pb-3 mb-3 d-flex"></div>
@@ -13,12 +13,12 @@
                 <img src="{% static 'dist/img/images/resized.jpg' %}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">{{ request.user.username }}</a>
+                <a href="#" class="d-block"> Dr(a) {{ request.user.username }}</a>
             </div>
         </div>
 
         <nav class="mt-4">
-            <ul class="nav nav-pills nav-sidebar flex-column">
+            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item">
                     <a href="{% url 'lawsuits:list' %}" class="nav-link sidebar-text">
                         <p>
@@ -30,12 +30,31 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link sidebar-text">
                         <p>
-                            <i class="fas fa-book" style="color: #ffffff;"></i>
+                            <i class="fas fa-users" style="color: #ffffff;"></i>
                             Registros
                         </p>
                     </a>
+                        <ul class="nav nav-treeview" style="display: none; margin-left:20px">
+                            <li class="nav-item sidebar-text">
+                                <a href="" class="nav-link">
+                                    <p>
+                                        <i class="fas fa-user" style="color: #ffffff;"></i>
+                                        Cliente
+                                    </p>
+                                </a>
+                            </li>
+                            <li class="nav-item sidebar-text">
+                                <a href="" class="nav-link">
+                                    <p>
+                                        <i class="fas fa-user-slash" style="color: #ffffff;"></i>
+                                        Parte Adversa
+                                    </p>
+                                </a>
+                            </li>
+                        </ul>
                 </li>
-            </ul>
+        </ul>
+        
         </nav>
     </div>
 
