--- a/code/project/templates/base/scripts.html
+++ b/code/project/templates/base/scripts.html
@@ -13,7 +13,7 @@
 <!-- overlayScrollbars -->
 <script src="{% static 'dist/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
 <!-- AdminLTE App -->
-<script src="{% static 'dist/js/adminlte.min.js' %}"></script>
+<script src="{% static 'dist/js/adminlte.min.js' %}"></script
 
 <script>
     $(document).ready(function(){
