--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -20,7 +20,7 @@
         <nav class="mt-4">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item">
-                    <a href="{% url 'lawsuits:list' %}" class="nav-link sidebar-text">
+                    <a href="{% url 'lawsuit:list' %}" class="nav-link sidebar-text">
                         <p>
                             <i class="fas fa-gavel" style="color: #ffffff;"></i>
                                 Processos
@@ -36,7 +36,7 @@
                     </a>
                         <ul class="nav nav-treeview" style="display: none; margin-left:20px">
                             <li class="nav-item sidebar-text">
-                                <a href="" class="nav-link">
+                                <a href="{% url 'client:list' %}" class="nav-link">
                                     <p>
                                         <i class="fas fa-user" style="color: #ffffff;"></i>
                                         Cliente
@@ -44,7 +44,7 @@
                                 </a>
                             </li>
                             <li class="nav-item sidebar-text">
-                                <a href="" class="nav-link">
+                                <a href="{% url 'adverse_part:list' %}" class="nav-link">
                                     <p>
                                         <i class="fas fa-user-slash" style="color: #ffffff;"></i>
                                         Parte Adversa
