--- a/code/parte_adversa/templates/adverse_part_list.html
+++ b/code/parte_adversa/templates/adverse_part_list.html
@@ -10,7 +10,7 @@
         <div class="card-header">
             <h2 class="card-title">Parte Adversa</h2>
             <div class="card-tools">
-                <div class="input-group input-group-sm" style="width: 500px;">
+                <div class="input-group input-group-sm">
                     <input type="text" name="table_search" class="form-control float-right" placeholder="Pesquisar">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-default">
