--- a/code/processo/templates/lawsuit_detail/lawsuit_values.html
+++ b/code/processo/templates/lawsuit_detail/lawsuit_values.html
@@ -4,7 +4,7 @@
         <div class="card-header">
             <h2 class="card-title mont-serrat">Valores do Processo</h2>
             <div class="card-tools">
-                <div class="input-group input-group-sm" style="width: 500px;">
+                <div class="input-group input-group-sm">
                     <input type="text" name="table_search" class="form-control float-right" placeholder="Pesquisar">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-default">
