--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
-{% block title %}<h1>Processos</h1>{% endblock title %}
+{% block title %}<h1 class="mont-serrat">Processos</h1>{% endblock title %}
 {% block breadcrumb %}
     <li class="breadcrumb-item"><a href="/">Home</a></li>
     <li class="breadcrumb-item active">Processos</li>
@@ -10,7 +10,7 @@
         <div class="card-header">
             <h2 class="card-title">Processos</h2>
             <div class="card-tools">
-                <div class="input-group input-group-sm" style="width: 500px;">
+                <div class="input-group input-group-sm">
                     <input type="text" name="table_search" class="form-control float-right" placeholder="Pesquisar">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-default">
