--- a/code/cliente/templates/client_detail.html
+++ b/code/cliente/templates/client_detail.html
@@ -4,7 +4,8 @@
 {% block title %}<h1 class="mont-serrat">Clientes</h1>{% endblock title %}
 {% block breadcrumb %}
     <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">Clientes</li>
+    <li class="breadcrumb-item">Clientes</li>
+    <li class="breadcrumb-item active">{{client}}</li>
 {% endblock %}
 {% block content %}
 <div class="row">
@@ -22,7 +23,7 @@
                 <p class="text-muted text-center">{{client.profissao}}</p>
                 <ul class="list-group list-group-unbordered mb-3">
                     <li class="list-group-item">
-                        <b>Processos envolvidos</b><a class="float-right">100</a>
+                        <b>Processos envolvidos</b><a class="float-right">1</a>
                     </li>
                     <li class="list-group-item">
                         <b>CPF / CNPJ</b> {{client.cpf_cnpj}}
@@ -45,12 +46,14 @@
             </div>
         <div class="card-body">
             <div class="tab-content">
-                <div class="tab-pane" id="address">
-                </div>
-                <div class="tab-pane" id="contact_info">
-                </div>
                 <div class="tab-pane active" id="infos">
                     {% include "client_detail/client_infos.html" %}
+                </div>
+                <div class="tab-pane" id="address">
+                    {% include "client_detail/client_address.html" %}
+                </div>
+                <div class="tab-pane" id="contact_info">
+                    {% include "client_detail/client_contacts.html" %}
                 </div>
             </div>
         </div>
