--- a/code/cliente/templates/client_list.html
+++ b/code/cliente/templates/client_list.html
@@ -22,7 +22,7 @@
     </form>
     <div class="card-body pb-0">
         <div class="row">
-            {% for client in clients %}
+            {% for client in page.object_list %}
                 <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch flex-column">
                     <div class="card bg-light d-flex flex-fill">
                         <a href="{% url 'client:detail' client.pk %}">
@@ -56,18 +56,7 @@
     </div>
     
     <div class="card-footer">
-        <nav aria-label="Contacts Page Navigation">
-            <ul class="pagination justify-content-center m-0">
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">4</a></li>
-                <li class="page-item"><a class="page-link" href="#">5</a></li>
-                <li class="page-item"><a class="page-link" href="#">6</a></li>
-                <li class="page-item"><a class="page-link" href="#">7</a></li>
-                <li class="page-item"><a class="page-link" href="#">8</a></li>
-            </ul>
-        </nav>
+        {% include "base/pagination.html" %}
     </div>
 </div>
 {% endblock %}
