--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -1,9 +1,9 @@
 {% load static %}
-<aside style="background: #0e1e38" class="main-sidebar main-sidebar-custom sidebar-dark-secondary elevation-4">
+<aside style="background: #18324d" class="main-sidebar main-sidebar-custom sidebar-dark-secondary elevation-4">
     <div class="sidebar">
 
         <div style="align-items: center; justify-content: center;" class="mt-3 pb-3 mb-3 d-flex">
-            <img style="width: 150px; height: 150px; border-radius: 60px;" src="{% static 'dist/img/images/277606405_1177846459642535_7637691257266544301_n.jpg' %}" alt="">
+            <img style="width: 150px; height: 150px; border-radius: 100px;" src="{% static 'dist/img/images/277606405_1177846459642535_7637691257266544301_n.jpg' %}" alt="">
         </div>
 
         <div class="user-panel mt-3 pb-3 mb-3 d-flex"></div>
