--- a/code/cliente/templates/client_detail/client_modals/client_address_delete.html
+++ b/code/cliente/templates/client_detail/client_modals/client_address_delete.html
@@ -17,7 +17,7 @@
               <button type="button" class="btn btn-secondary" data-dismiss="modal">
                 Fechar
               </button>
-              <form action="" method="post">
+              <form action="{% url 'client:client_address_delete' client.pk address.pk %}" method="POST">
                   {% csrf_token %}
                   <button type="submit" class="btn btn-danger">Apagar</button>
               </form>
