--- a/code/project/templates/base/base.html
+++ b/code/project/templates/base/base.html
@@ -37,6 +37,7 @@
                 </div>
               </div>
             </section> 
+            {% include "messages/messages.html" %}
             <section class="content">
                 {% block content %}{% endblock %}
             </section>
