--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -36,7 +36,7 @@
                     </a>
                         <ul class="nav nav-treeview" style="display: none; margin-left:20px">
                             <li class="nav-item sidebar-text">
-                                <a href="{% url 'client:list' %}" class="nav-link">
+                                <a href="{% url 'client:client_list' %}" class="nav-link">
                                     <p>
                                         <i class="fas fa-user" style="color: #ffffff;"></i>
                                         Cliente
