adverse part pages

--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -52,7 +52,7 @@
                                 </a>
                             </li>
                             <li class="nav-item sidebar-text">
-                                <a href="{% url 'adverse_part:list' %}" class="nav-link">
+                                <a href="{% url 'adverse_part:adverse_part_list' %}" class="nav-link">
                                     <p>
                                         <i class="fas fa-user-slash" style="color: #ffffff;"></i>
                                         Parte Adversa
