--- a/code/cliente/templates/client_detail.html
+++ b/code/cliente/templates/client_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% load static %}
-{% block title %}<h1 class="mont-serrat">Clientes</h1>{% endblock title %}
+{% block title %}<h1 class="mont-serrat">Clientes - {{client}}</h1>{% endblock title %}
 {% block breadcrumb %}
     <li class="breadcrumb-item"><a href="/">Home</a></li>
     <li class="breadcrumb-item">Clientes</li>
@@ -23,7 +23,7 @@
                 <p class="text-muted text-center">{{client.profissao}}</p>
                 <ul class="list-group list-group-unbordered mb-3">
                     <li class="list-group-item">
-                        <b>Processos envolvidos</b><a class="float-right">1</a>
+                        <b>Processos envolvidos</b><a class="float-right">{{ lawsuits_envolved }}</a>
                     </li>
                     <li class="list-group-item">
                         <b>CPF / CNPJ</b> {{client.cpf_cnpj}}
