--- a/code/parte_adversa/templates/adverse_part_detail.html
+++ b/code/parte_adversa/templates/adverse_part_detail.html
@@ -1,41 +1,64 @@
 {% extends 'base/base.html' %}
-{% block title %}<h1 class="mont-serrat">Parte Adversa - {{ adverse_part }} </h1>{% endblock title %}
+
+{% load static %}
+{% block title %}<h1 class="mont-serrat">Parte Adversa - {{adverse_part}}</h1>{% endblock title %}
 {% block breadcrumb %}
-    <li class="breadcrumb-item">Home</li>
-    <li class="breadcrumb-item"><a href="{% url 'adverse_part:list' %}" >Processos</a></li>
-    <li class="breadcrumb-item active">{{ adverse_part }}</li>
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item">Parte Adversa</li>
+    <li class="breadcrumb-item active">{{adverse_part}}</li>
 {% endblock %}
 {% block content %}
-<div class="card card-primary card-outline card-outline-tabs">
-    <div class="card-header p-0 border-bottom-0">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active text-dark" id="home-tab" data-bs-toggle="tab" data-bs-target="#adverse_part" type="button" role="tab" aria-controls="adverse_part" aria-selected="true">
-                    Informações
-                </button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link text-dark" id="profile-tab" data-bs-toggle="tab" data-bs-target="#adverse_part-values" type="button" role="tab" aria-controls="adverse_part-values" aria-selected="false">
-                    Endereços
-                </button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link text-dark" id="contact-tab" data-bs-toggle="tab" data-bs-target="#adverse_part-files" type="button" role="tab" aria-controls="adverse_part-files" aria-selected="false">
-                    Emails
-                </button>
-            </li>
-        </ul>
+<div class="row">
+    <div class="col-md-3">
+        <div class="card card-outline">
+            <div class="card-body box-profile">
+                <div class="text-center">
+                    {% if adverse_part.image %}
+                        <img src="{{ adverse_part.image.url }}" alt="user-avatar" style="width: 120px; height: 120px;" class="img-circle img-fluid">
+                    {% else %}
+                        <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 120px; height: 120px;" class="img-circle img-fluid">
+                    {% endif %}   
+                </div>
+                <h3 class="profile-username text-center">{{adverse_part.nome}}</h3>
+                <p class="text-muted text-center">{{adverse_part.profissao}}</p>
+                <ul class="list-group list-group-unbordered mb-3">
+                    <li class="list-group-item">
+                        <b>Processos envolvidos</b><a class="float-right">{{lawsuits_envolved}}</a>
+                    </li>
+                    <li class="list-group-item">
+                        <b>CPF / CNPJ</b> {{adverse_part.cpf_cnpj}}
+                    </li>
+                    <li class="list-group-item">
+                    <b>Chegou no escritorio </b>{{adverse_part.created_at}}
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-        <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="adverse_part" role="tabpanel" aria-labelledby="adverse_part-tab">
+    <div class="col-md-9">
+        <div class="card">
+            <div class="card-header p-2">
+                <ul class="nav nav-pills">
+                    <li class="nav-item"><a class="nav-link active" href="#infos" data-toggle="tab">Editar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#address" data-toggle="tab">Endereços</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact_info" data-toggle="tab">Informações de contato</a></li>
+                </ul>
             </div>
-            <div class="tab-pane fade" id="adverse_part-values" role="tabpanel" aria-labelledby="adverse_part-values-tab">
-
-            </div>
-            <div class="tab-pane fade" id="adverse_part-files" role="tabpanel" aria-labelledby="adverse_part-files-tab">
+        <div class="card-body">
+            <div class="tab-content">
+                <div class="tab-pane active" id="infos">
+                    {% include "adverse_part_detail/adverse_part_infos.html" %}
+                </div>
+                <div class="tab-pane" id="address">
+                    {% include "adverse_part_detail/adverse_part_address.html" %}
+                </div>
+                <div class="tab-pane" id="contact_info">
+                    {% include "adverse_part_detail/adverse_part_contacts.html" %}
+                </div>
             </div>
         </div>
     </div>
 </div>
+    
+    </div>
 {% endblock %}
