--- a/code/parte_adversa/templates/adverse_part_list.html
+++ b/code/parte_adversa/templates/adverse_part_list.html
@@ -1,64 +1,71 @@
 {% extends 'base/base.html' %}
-{% block title %}<h1 class="mont-serrat">Parte adversa</h1>{% endblock title %}
+{% load static %}
+{% block title %}
+<h1 class="mont-serrat">
+    Parte Adversa
+    <div class="float-right">
+        <a href="{% url 'adverse_part:adverse_part_create' %}" class="btn-lg btn-success">
+            Criar Parte Adversa
+        </a>
+    </div>
+</h1>
+{% endblock title %}
 {% block breadcrumb %}
     <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">Parte Adversa</li>
+    <li class="breadcrumb-item active">Clientes</li>
 {% endblock %}
 {% block content %}
-<div class="container-fluid">
-    <div class="card">
+
+<div class="card card-solid">
+    <form action="{% url 'adverse_part:adverse_part_list' %}" method="get">
         <div class="card-header">
-            <h2 class="card-title">Parte Adversa</h2>
-            <div class="card-tools">
-                <div class="input-group input-group-sm">
-                    <input type="text" name="table_search" class="form-control float-right" placeholder="Pesquisar">
-                    <div class="input-group-append">
-                        <button type="submit" class="btn btn-default">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
+            <div class="input-group">
+                <input type="search" class="form-control form-control-lg" name="q" placeholder="Pesquisar Parte Adversa">
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-lg btn-default">
+                        <i class="fa fa-search"></i>
+                    </button>
                 </div>
             </div>
         </div>
-        <div class="card-body p-0">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Nome</th>
-                        <th>Email</th>
-                        <th>Numero</th>
-                        <th>Cpf/Cnpj</th>
-                        <th>Tipo</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for adverse_part in adverse_parts %}
-                    <tr>
-                            <td><a href="{% url 'adverse_part:detail' adverse_part.pk %}">{{ adverse_part }}</a></td>
-                            <td>{{ adverse_part.nome }}</td>
-                            <td>{{ adverse_part.email }}</td>
-                            <td>{{ adverse_part.numero }}</td>
-                            <td>{{ adverse_part.cpf_cnpj }}</td>
-                            <td>{{ adverse_part.tipo }} </td>
-                            <td><a href="{% url 'adverse_part:detail' adverse_part.pk %}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
-                    <tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            <div class="card-footer clearfix">
-                <button class="btn btn-success btn-sm mont-serrat" data-toggle="modal" data-target="" >
-                    Nova Parte Adversa
-                </button>
+    </form>
+    <div class="card-body pb-0">
+        <div class="row">
+            {% for adverse_part in page.object_list %}
+                <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch flex-column">
+                    <div class="card bg-light d-flex flex-fill">
+                        <a href="{% url 'adverse_part:adverse_part_detail' adverse_part.pk %}">
+                        <div class="card-header text-muted border-bottom-0">
+                            {{adverse_part}}
+                        </div>
+                        <div class="card-body pt-0">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h2 class="lead text-dark" style="text-decoration: none;"><b>{{adverse_part.nome}}</b></h2>
+                                    <span class="text-muted "><b>Profissão </b> {{adverse_part.profissao}} </span><br>
+                                    <span class="text-muted "><b>Estado Civil </b> {{adverse_part.estado_civil}} </span><br>
+                                    <span class="text-muted "><b>Cpf/Cnpj </b> {{adverse_part.cpf_cnpj}} </span><br>
+                                    <span class="text-muted "><b>Registrado</b> {{adverse_part.created_at}} </span><br>
+                                </div>
+                                <div class="col-5 text-center">
+                                    {% if adverse_part.image %}
+                                        <img src="{{ adverse_part.image.url }}" alt="user-avatar" style="width: 120px; height: 120px;" class="img-circle img-fluid">
+                                    {% else %}
+                                        <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 120px; height: 120px;" class="img-circle img-fluid">
+                                    {% endif %}
+                                </div>
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+        {% endfor %}
 
-                <ul class="pagination pagination-sm m-0 float-right">
-                <li class="page-item"><a class="page-link" href="#">«</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">»</a></li>
-                </ul>
-            </div>
         </div>
+    </div>
+    
+    <div class="card-footer">
+        {% include "base/pagination.html" %}
     </div>
 </div>
 {% endblock %}
