--- a/code/parte_adversa/templates/adverse_part_create.html
+++ b/code/parte_adversa/templates/adverse_part_create.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="card-body">
-            <form action="{% url 'adverse_part:adverse_part_create' %}" method="POST">
+            <form enctype='multipart/form-data' action="{% url 'adverse_part:adverse_part_create' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
                     {{form}}
