--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -2,8 +2,17 @@
 {% load static %}
 {% block title %}<h1 class="mont-serrat">Processos</h1>{% endblock title %}
 {% block breadcrumb %}
-    <li class="breadcrumb-item"><a href="/">Home</a></li>
-    <li class="breadcrumb-item active">Processos</li>
+<li class="breadcrumb-item"><a href="/">Home</a></li>
+<li class="breadcrumb-item active">
+    <h1 class="mont-serrat">
+        Clientes
+        <div class="float-right">
+            <a href="{% url 'client:client_create' %}" class="btn-lg btn-success">
+                Criar Processo
+            </a>
+        </div>
+    </h1>    
+</li>
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
